# rat

./: .gitignore  ACP.md  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  Justfile  README.md  TODO.md  backend.md  flake.nix  i_loveyou.md  joke.md  jokes2.md  plan.md  rat.out  sim_agent_refactor.md  spec.md  spec2.md  spec_done.md  spec_final.md  spec_informal.md  spec_local_web.org  spec_local_web_current_state.org  spec_rat.md  spec_v4.md  test_agent.sh  test_diff.rs  test_sim_agent.rs  watch-logs.sh
backend/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile
backend/docs/: frp.md  mobile.md
backend/examples/: basic_client.rs  sim_agent.rs
backend/src/: frp.rs  local_ws.rs  main.rs
backend/src/acp/: client.rs  message.rs
backend/src/adapters/: agent_installer.rs  external.rs  gemini.rs  manager.rs  mod.rs
backend/src/effects/: code.rs  mod.rs  startup.rs  text.rs  transitions.rs
backend/src/ui/: permission_prompt.rs  terminal.rs
backend/src/ui/components/: agent_selector.rs  mod.rs
backend/src/utils/: mod.rs  terminal.rs
backend/tests/: claude_integration.rs  headless.rs  sim_agent_jsonrpc.rs
backend/tests/integration/: mod.rs  session_lifecycle_integration_tests.rs
backend/tests/unit/: acp_connection_tests.rs  mod.rs  session_tests.rs
docs/: TODO.md  plan.md  rat_acp_premissions.md  spec_rat2e.org  spec_rat_current_state.org  zed_acp.md  zed_acp_agent_launching.md  zed_acp_debugging.md  zed_acp_extensibility.md  zed_acp_login.md  zed_acp_premissions.md
examples/: basic_client.rs  sim_agent.rs  simple_acp_login_check.rs  simple_acp_test.rs  test_acp_client.rs
rat-web/: .env.example  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  RUN_DEV.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.dev.ts  vite.config.ts  wrangler.toml
rat-web/app/: app.tsx  entry-client.tsx  main.tsx  manifest.webmanifest  root.tsx
rat-web/app/components/Agent/: PromptSheet.tsx
rat-web/app/hooks/: useLocalStorage.ts
rat-web/app/lib/: ws.ts
rat-web/app/routes/: core-app.tsx  dashboard.tsx  index.tsx  login.tsx  onboarding.tsx
rat-web/app/stores/: authStore.ts  chatStore.ts  editorStore.ts
rat-web/app/styles/: globals.css
rat-web/public/: manifest.webmanifest  offline.html
rat-web/public/icons/: generate-icons.html
rat-web/src/: App.tsx  index.tsx  state.ts  styles.css  test-app.tsx
rat-web/src/components/: ChatView.tsx  CommandsPanel.tsx  DiffView.tsx  EditableDiffView.tsx  LiquidChatButton.tsx  LiquidChatModal.tsx  ModeSelector.tsx  PermissionDialog.tsx  PlanPanel.tsx  TerminalView.tsx  Toast.tsx
rat-web/src/lib/: ws.ts
rat-web/src/routes/: onboarding.tsx
rat-web/src/stores/: authStore.ts
rat-web/src/styles/: onboarding.css
rat-web/src/utils/: devAuth.ts
site/: package-lock.json  package.json  tailwind.config.ts
site/src/app/: .globals.css.swp  globals.css  layout.tsx  page.tsx
src/: app.rs  lib.rs  local_ws.rs  main.rs  pairing.rs
src/acp/: client.rs  message.rs  mod.rs  permissions.rs  session.rs
src/adapters/: agent_installer.rs  claude_code.rs  gemini.rs  manager.rs  mod.rs  traits.rs
src/config/: agent.rs  mod.rs  project.rs  ui.rs
src/effects/: cyberpunk.rs  mod.rs  startup.rs  themes.rs
src/ui/: app.rs  chat.rs  diff.rs  glyphs.rs  mod.rs  plan.rs  statusbar.rs  terminal.rs
src/ui/components/: agent_selector.rs
src/utils/: diff.rs  syntax.rs
tests/: claude_integration.rs  debug_session_creation.rs  external_adapter_integration.rs  headless.rs  permission_system_test.rs  sim_agent_jsonrpc.rs
tests/unit/: acp_connection_tests.rs  config_tests.rs  mod.rs  tui_session_creation_tests.rs  utils_tests.rs
(+40 files in other folders)
